[package]
name = "rust_wasm"
version = "0.1.0"
authors = ["Byron Cueva"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.40"
lazy_static = "1.4.0"
nalgebra = "0.21.1"
wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'MouseEvent',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]